fix send extra tcp package
update ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,13 @@ language: rust
 rust: nightly
 before_script:
   - export PATH="$PATH:$HOME/.cargo/bin"
-  - which rustfmt || cargo install --vers 0.8.4 rustfmt
+  - rustup component add rustfmt-preview --toolchain nightly
 
 script:
-    - cargo fmt -- --write-mode=diff
+    - cargo +nightly fmt -- --write-mode=diff
     - ./scripts/build-all.sh
     - cargo test --features nightly
     - cargo bench --features nightly
-
 after_success:
   - sudo apt-get install python-unittest2
   - sudo pip install ghp-import urllib3[secure] autobahntestsuite
